# ocpp-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  clippy.toml  docker-compose.yml  rustfmt.toml
.github/workflows/: ci.yml
config/: default.toml
crates/ocpp-cli/: Cargo.toml  README.md
crates/ocpp-cli/examples/: test-connection.md
crates/ocpp-cli/src/: client.rs  commands.rs  config.rs  lib.rs  scenarios.rs  testing.rs  ui.rs
crates/ocpp-conformance/: Cargo.toml
crates/ocpp-conformance/src/: lib.rs
crates/ocpp-cp/: Cargo.toml
crates/ocpp-cp/src/: connector.rs  error.rs  lib.rs  message_handler.rs  state_machine.rs  transaction.rs
crates/ocpp-csms/: Cargo.toml
crates/ocpp-csms/src/: auth.rs  config.rs  database.rs  error.rs  handlers.rs  lib.rs  manager.rs  metrics.rs  server.rs  state.rs
crates/ocpp-messages/: Cargo.toml
crates/ocpp-messages/src/: lib.rs  serialization.rs  v16j.rs  validation.rs
crates/ocpp-simulator/: Cargo.toml  README.md
crates/ocpp-simulator/src/: api.rs  config.rs  error.rs  events.rs  fault_injector.rs  lib.rs  meter_simulator.rs  scenario.rs  simulator.rs  websocket.rs
crates/ocpp-transport/: Cargo.toml
crates/ocpp-transport/src/: client.rs  error.rs  lib.rs  server.rs  websocket.rs
crates/ocpp-types/: Cargo.toml
crates/ocpp-types/src/: common.rs  error.rs  lib.rs  message.rs  v16j.rs
docs/: interactive-connector-actions.md
scripts/db/: init.sql
