[workspace]
resolver = "2"
members = [
    "crates/ocpp-types",
    "crates/ocpp-messages",
    "crates/ocpp-transport",
    "crates/ocpp-csms",
    "crates/ocpp-cp",
    "crates/ocpp-simulator",
    "crates/ocpp-conformance",
    "crates/ocpp-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["ocpp-rs contributors"]
license = "MIT"
repository = "https://github.com/ocpp-rs/ocpp-rs"
homepage = "https://github.com/ocpp-rs/ocpp-rs"
description = "A modern, production-grade OCPP implementation in Rust"
keywords = ["ocpp", "ev", "charging", "websocket", "electric-vehicle"]
categories = ["network-programming", "simulation", "web-programming::websocket"]

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"

# WebSocket and HTTP
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tungstenite = "0.20"
hyper = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Configuration
config = "0.14"
clap = { version = "4.4", features = ["derive"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }

# Metrics and observability
prometheus = "0.13"
metrics = "0.22"
metrics-prometheus = "0.6"

# Utilities
futures = "0.3"
futures-util = "0.3"
pin-project = "1.1"
bytes = "1.5"
dashmap = "5.5"

# Testing
mockall = "0.12"
wiremock = "0.6"
proptest = "1.4"
criterion = "0.5"

# Development tools
cargo-tarpaulin = "0.27"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
debug = false
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.test]
opt-level = 1
debug = true

[profile.bench]
opt-level = 3
debug = false
lto = "thin"
