[package]
name = "ocpp-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "OCPP CLI application for testing and simulation"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "ocpp-cli"
path = "src/bin/main.rs"

[dependencies]
ocpp-types = { path = "../ocpp-types" }
ocpp-messages = { path = "../ocpp-messages" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.0", features = ["derive", "color"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
futures-util = "0.3"
url = "2.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
http = "1.0"
crossterm = "0.27"
ratatui = "0.24"
colored = "2.0"
indicatif = "0.17"
dialoguer = "0.11"
ctrlc = "3.4"
rand = "0.8"
toml = "0.8"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tokio-test = "0.4"
