[package]
name = "ocpp-csms"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Central System Management System (CSMS) implementation for OCPP protocol"
keywords.workspace = true
categories.workspace = true

[dependencies]
ocpp-types = { path = "../ocpp-types" }
ocpp-messages = { path = "../ocpp-messages" }
ocpp-transport = { path = "../ocpp-transport" }
tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
config = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
prometheus = { workspace = true }
metrics = { workspace = true }
metrics-prometheus = { workspace = true }
async-trait = "0.1"
scopeguard = "1.2"
url = "2.4"
toml = "0.8"
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
mockall = { workspace = true }
wiremock = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }

[features]
default = ["postgres", "metrics"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
metrics = []
tracing = []
rest-api = []

[[bin]]
name = "ocpp-csms"
path = "src/bin/csms.rs"
