[package]
name = "ocpp-simulator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "OCPP ocpp-simulator implementation"
keywords.workspace = true
categories.workspace = true

[dependencies]
ocpp-types = { path = "../ocpp-types" }
ocpp-messages = { path = "../ocpp-messages" }
ocpp-cp = { path = "../ocpp-cp" }
ocpp-transport = { path = "../ocpp-transport" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
async-trait = "0.1"
rand = "0.8"
futures = "0.3"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tokio-test = "0.4"
